Did not make any change

--- a/diabetes.ipynb
+++ b/diabetes.ipynb
@@ -2211,6 +2211,17 @@
    "source": [
     "`Out of all the model we built, Random Forest is the best model for this prediction since it has an accuracy_score and f1_score of 0.7239583333333334, mean squared error of 0.2760416666666667.`"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`From the Feature Importance graph, we can draw the following conclusion:`\n",
+    "```\n",
+    "The variables of glucose level, BMI, Insulin, number of pregnancies, and age were found to have a considerable impact on the model, with glucose level and BMI being particularly influential. It is reassuring to see that our machine learning model aligns with what we have consistently heard from medical professionals throughout our lives.\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
